<resources>
    <string name="app_name">CityMov</string>

    <string name="hello_citymov">Hello CityMoov!</string>
    <string name="action_settings">Configuração</string>
    <string name="action_premium">Premium</string>
    <string name="action_sobre">Sobre</string>
    <string name="lbl_username">Nome do usuario</string>
    <string name="lbl_enter_username">Digite seu nome de usuario</string>
    <string name="lbl_pwd">Senha do usuario</string>
    <string name="lbl_enter_pwd">Digite sua senha</string>
    <string name="lbl_login">Entrar</string>
    <string name="lbl_login_facebook">Entrar pelo Facebook</string>
    <string name="title_activity_main_list">CityMov</string>
    <string name="nothing_found">Nenhum evento encontrado!</string>
    <string name="string_search">Buscar evento ...</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_event_list_perso">CityMov</string>

    <string name="title_section1">Popular</string>
    <string name="title_section2">Amigos</string>
    <string name="title_section3">Meus eventos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">CITYMOV</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
