<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mwanza.citymov.EventListPerso">
    <item android:id="@+id/action_example"
          android:title="@string/app_name"
          app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never" />
    <item android:id="@+id/action_sobre"
        android:title="@string/action_sobre"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_premium"
        android:title="@string/action_premium"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
